sign in function

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 GOOGLE_ID = 583392332920-gobots50f1slnf0ckamq0ctc31eodsnu.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET = 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
-MONGODB_URI=mongodb+srv://kahodev:KwteVuOygQpQII1t@promptopia.prfvnfx.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI = mongodb+srv://kahodev:KwteVuOygQpQII1t@promptopia.prfvnfx.mongodb.net/?retryWrites=true&w=majority
+NEXTAUTH_URL = http://localhost:3000
+NEXTAUTH_URL_INTERNAL = http://localhost:3000
+NEXTAUTH_SECRET = Q5vPbzd7IEG5eP8KQdHUoHN21K5V8hLulcRRQdO1K8o=
